--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6526,7 +6526,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T18:08:10Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6675,11 +6675,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n+2vZg7SKdN0
-								Vx3l4hMW+Q==
+								kGmcPrwpUu48
+								KgCqQAwSKg==
 								</data>
 								<key>Size</key>
-								<integer>88115</integer>
+								<integer>88379</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10366,7 +10366,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T18:08:10Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10455,11 +10455,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2ArbAXJ2Eo0/
-								mDAgJBrdOQ==
+								z2kPDeRgc8mA
+								NWAg8W8O7A==
 								</data>
 								<key>Size</key>
-								<integer>54176</integer>
+								<integer>54439</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12032,7 +12032,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T18:08:10Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12231,11 +12231,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aG5a34ZZ5I9U
-								K6t62cqLsw==
+								nc97MbyZCR45
+								ZeOpHpfWWQ==
 								</data>
 								<key>Size</key>
-								<integer>88928</integer>
+								<integer>89192</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14912,7 +14912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-22T17:11:08Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15951,8 +15951,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HmJt9Yhf7uX5
-								EtT71xoJrA==
+								3VyYjENP/BJ5
+								Fgbue++tKg==
 								</data>
 								<key>Size</key>
 								<integer>3785</integer>
@@ -16099,7 +16099,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFK3RedkkOADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFK7JtPNVSADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16109,14 +16109,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUrdF52S
-				sIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUrsm082
+				UIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSt0XnZLR
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSuybTzaL
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16126,7 +16126,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSt0XnZLqgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSuybTza9gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16136,7 +16136,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBSt0XnZMDgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBSuybTzbngAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
