--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T18:08:10Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -232,11 +232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aG5a34ZZ5I9U
-								K6t62cqLsw==
+								nc97MbyZCR45
+								ZeOpHpfWWQ==
 								</data>
 								<key>Size</key>
-								<integer>88928</integer>
+								<integer>89192</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
