--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T18:08:10Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -182,11 +182,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n+2vZg7SKdN0
-								Vx3l4hMW+Q==
+								kGmcPrwpUu48
+								KgCqQAwSKg==
 								</data>
 								<key>Size</key>
-								<integer>88115</integer>
+								<integer>88379</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
