--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-14T18:08:10Z</date>
+						<date>2019-05-22T19:23:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2ArbAXJ2Eo0/
-								mDAgJBrdOQ==
+								z2kPDeRgc8mA
+								NWAg8W8O7A==
 								</data>
 								<key>Size</key>
-								<integer>54176</integer>
+								<integer>54439</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
