--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-22T17:11:08Z</date>
+						<date>2019-05-23T15:10:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,31 +554,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dh4s7uZvywD7
-								IfPDP46Cdw==
+								YfSjTH8dFREI
+								kbTMhFaXXQ==
 								</data>
 								<key>Size</key>
-								<integer>413074</integer>
+								<integer>412799</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4IhvBTCsN2M/
-								+UkFdXDOKw==
+								Lb1u2Xl9HszQ
+								UigZWh249A==
 								</data>
 								<key>Size</key>
-								<integer>67885</integer>
+								<integer>67703</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zipB0jA1OH+r
-								haX3jbNnXg==
+								Xz8Tw8D1Qqi9
+								SRGrIvMmOw==
 								</data>
 								<key>Size</key>
-								<integer>811650</integer>
+								<integer>808921</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
