program update netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-23T15:10:12Z</date>
+						<date>2019-05-23T15:41:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YfSjTH8dFREI
-								kbTMhFaXXQ==
+								0f9rg60bVUjD
+								2FmNNkCK6Q==
 								</data>
 								<key>Size</key>
-								<integer>412799</integer>
+								<integer>412252</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -574,11 +574,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Xz8Tw8D1Qqi9
-								SRGrIvMmOw==
+								ivbIE5gkjds4
+								mB9vSSIMnw==
 								</data>
 								<key>Size</key>
-								<integer>808921</integer>
+								<integer>808480</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
