program update pdf

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-23T15:41:56Z</date>
+						<date>2019-05-23T17:04:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,21 +94,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-10d7e4a.jpg</key>
 							<dict>
@@ -304,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0f9rg60bVUjD
-								2FmNNkCK6Q==
+								AdOy4xQjMQj2
+								EGzCSI4x0Q==
 								</data>
 								<key>Size</key>
-								<integer>412252</integer>
+								<integer>412799</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -574,11 +574,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ivbIE5gkjds4
-								mB9vSSIMnw==
+								fMGn5b86qXzq
+								Nl7DmoiXRg==
 								</data>
 								<key>Size</key>
-								<integer>808480</integer>
+								<integer>808920</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
