food truck cash and magnet warning
food truck cash and magnet warning

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T22:08:21Z</date>
+						<date>2019-05-23T17:51:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -284,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VOwfG/yFH+LN
-								v7EXXW9KeA==
+								NRQGbSfFwBYL
+								oSPhf4/P3w==
 								</data>
 								<key>Size</key>
-								<integer>136726</integer>
+								<integer>136942</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
