--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-23T17:51:22Z</date>
+						<date>2019-05-24T19:33:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SklV/MHk7JcH
-								pzqRYjHC4A==
+								2tMekIv/dLra
+								4TqEtjq4Zg==
 								</data>
 								<key>Size</key>
-								<integer>190034</integer>
+								<integer>188313</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -284,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NRQGbSfFwBYL
-								oSPhf4/P3w==
+								TmQQ3vJ/I8uK
+								A0P1aUpoTA==
 								</data>
 								<key>Size</key>
-								<integer>136942</integer>
+								<integer>136002</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
