--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-23T22:03:18Z</date>
+						<date>2019-05-24T19:33:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,31 +94,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
-							</dict>
-							<key>files/stacks-image-10d7e4a.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								p0hwe6z2OFDW
-								41UdSKLmNA==
-								</data>
-								<key>Size</key>
-								<integer>10132</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
@@ -129,6 +119,26 @@
 								</data>
 								<key>Size</key>
 								<integer>530208</integer>
+							</dict>
+							<key>files/stacks-image-143d2ab-398x400.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2B18/kXRXAu7
+								b2DvsoG6Eg==
+								</data>
+								<key>Size</key>
+								<integer>168241</integer>
+							</dict>
+							<key>files/stacks-image-143d2ab-398x400@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M4DLnG5/yN5Z
+								tNVIFufanQ==
+								</data>
+								<key>Size</key>
+								<integer>539645</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -169,6 +179,16 @@
 								</data>
 								<key>Size</key>
 								<integer>26330</integer>
+							</dict>
+							<key>files/stacks-image-3a915a5.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								IhrvgJxy7IGR
+								gVD44j5VbQ==
+								</data>
+								<key>Size</key>
+								<integer>1654662</integer>
 							</dict>
 							<key>files/stacks-image-3f840b6-400x400.png</key>
 							<dict>
@@ -304,11 +324,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -370,6 +390,26 @@
 								<key>Size</key>
 								<integer>239632</integer>
 							</dict>
+							<key>files/stacks-image-8886a8a-426x400.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								m96BfspF+734
+								wA0r63z6VQ==
+								</data>
+								<key>Size</key>
+								<integer>50092</integer>
+							</dict>
+							<key>files/stacks-image-8886a8a-426x400@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d9aDSlZX7CPG
+								oQIlrwc/rg==
+								</data>
+								<key>Size</key>
+								<integer>115439</integer>
+							</dict>
 							<key>files/stacks-image-9416b79-700x375.png</key>
 							<dict>
 								<key>Digest</key>
@@ -379,6 +419,16 @@
 								</data>
 								<key>Size</key>
 								<integer>339587</integer>
+							</dict>
+							<key>files/stacks-image-94e39ec.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								VwOV6XW69A+5
+								YzGEibL1nw==
+								</data>
+								<key>Size</key>
+								<integer>7229</integer>
 							</dict>
 							<key>files/stacks-image-a0c9938-350x375.jpg</key>
 							<dict>
@@ -554,31 +604,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AdOy4xQjMQj2
-								EGzCSI4x0Q==
+								TreP0Bzvts0O
+								qdbsHxnV9Q==
 								</data>
 								<key>Size</key>
-								<integer>412799</integer>
+								<integer>418991</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Lb1u2Xl9HszQ
-								UigZWh249A==
+								nqbORg6Qo9ns
+								ySXCxJ1WNA==
 								</data>
 								<key>Size</key>
-								<integer>67703</integer>
+								<integer>68067</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dGc6HicNDciT
-								sz7MuM8e/g==
+								JmAg5Mp1L4yd
+								J85/184X+w==
 								</data>
 								<key>Size</key>
-								<integer>808898</integer>
+								<integer>815784</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
