--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-24T19:33:27Z</date>
+						<date>2019-05-25T18:10:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -624,11 +624,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JmAg5Mp1L4yd
-								J85/184X+w==
+								Wr56gJz2LO8t
+								7SGTge/jEw==
 								</data>
 								<key>Size</key>
-								<integer>815784</integer>
+								<integer>815842</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
