bus typo netsci
bus typo netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-24T19:33:27Z</date>
+						<date>2019-05-26T18:02:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -284,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TmQQ3vJ/I8uK
-								A0P1aUpoTA==
+								h+/ok1ThOKU7
+								XQSRhOP2bg==
 								</data>
 								<key>Size</key>
-								<integer>136002</integer>
+								<integer>135994</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
